form elemets in html

--- a/index.html
+++ b/index.html
@@ -210,9 +210,16 @@
         <option value="Zambia">Zambia</option>
         <option value="Zimbabwe">Zimbabwe</option>
       </select>
-      <label for=""></label>
+      <label for="postcode">Enter your postal code: </label>
+      <input type="text" id="postcode" />
+
+      <label for="password">Enter your password: </label>
+      <input type="password" id="password" />
+
+      <label for="password-conf">Confirm your password: </label>
+      <input type="password-conf" id="password-conf" />
       <span class="error"></span>
-      <button>Submit</button>
+      <button id="submit">Submit</button>
     </form>
     <script src="script.js"></script>
   </body>
