--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <form action="" novalidate>
       <label for="mail">Enter an email adress: </label>
       <input type="email" id="mail" name="mail" required />
-      <span class="error"></span>
+      <span class="error" id="mail-err"></span>
 
       <label for="country">Pick your country: </label>
-      <select id="country" name="country">
+      <select id="country" name="country" required>
+        <option value="" selected>Click here to pick</option>
         <option value="Afghanistan">Afghanistan</option>
         <option value="Albania">Albania</option>
         <option value="Algeria">Algeria</option>
@@ -211,18 +212,19 @@
         <option value="Zambia">Zambia</option>
         <option value="Zimbabwe">Zimbabwe</option>
       </select>
+      <span class="error" id="select-err"></span>
 
       <label for="postcode">Enter your postal code: </label>
       <input type="text" id="postcode" required />
-      <span class="error"></span>
+      <span class="error" id="postcode-err"></span>
 
       <label for="password">Enter your password: </label>
       <input type="password" id="password" required minlength="8" />
-      <span class="error"></span>
+      <span class="error" id="password-err"></span>
 
       <label for="password-conf">Confirm your password: </label>
-      <input type="password-conf" id="password-conf" required />
-      <span class="error"></span>
+      <input type="password" id="password-conf" required />
+      <span class="error" id="password-conf-err"></span>
 
       <button id="submit">Submit</button>
     </form>
