--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <label for="country">Pick your country: </label>
       <select id="country" name="country" required>
-        <option value="" selected>Click here to pick</option>
+        <option value="" disabled selected>Click here to pick</option>
         <option value="Afghanistan">Afghanistan</option>
         <option value="Albania">Albania</option>
         <option value="Algeria">Algeria</option>
@@ -223,7 +223,7 @@
       <span class="error" id="password-err"></span>
 
       <label for="password-conf">Confirm your password: </label>
-      <input type="password" id="password-conf" required />
+      <input type="password" id="password-conf" required minlength="8" />
       <span class="error" id="password-conf-err"></span>
 
       <button id="submit">Submit</button>
